Added Product Routes for Vendors and Product Templates for admin
